Bug 17936 - Search bar not aligned on right in small screen sizes
This patch tweaks the OPAC's CSS so that the main search form's fields
have consistent width at small screen sizes.

To test, apply the patch and process the LESS files. View the OPAC main
page at a very narrow browser width and confirm that the text field
width matches that of the dropdown and button.



(cherry picked from commit e94709cd7efaf3151ef1bde9278bc063a6ddcac1)

--- a/koha-tmpl/opac-tmpl/bootstrap/less/responsive.less
+++ b/koha-tmpl/opac-tmpl/bootstrap/less/responsive.less
@@ -124,7 +124,9 @@
         select,
         .librarypulldown .transl1,
         .input-append {
+            box-sizing: border-box;
             display: block;
+            height: 120%;
             width : 97%;
             max-width: 100%;
             margin : .5em 0;
